Use a unique token for PKG_CHECK_MODULES. Otherwise, if you use a global     configure cache, you cache it, and the cached value is probably wrong.

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,8 +21,8 @@
 
 bin_PROGRAMS = viewres
 
-viewres_CFLAGS = $(DEP_CFLAGS)
-viewres_LDADD = $(DEP_LIBS)
+viewres_CFLAGS = $(VIEWRES_CFLAGS)
+viewres_LDADD = $(VIEWRES_LIBS)
 
 viewres_SOURCES =	\
         viewres.c
