--- a/configure.ac
+++ b/configure.ac
@@ -31,9 +31,9 @@ AM_CONFIG_HEADER(config.h)
 AC_PROG_CC
 AC_PROG_INSTALL
 
-XAW_CHECK_XPRINT_SUPPORT(DEP)
+XAW_CHECK_XPRINT_SUPPORT(VIEWRES)
 
-AC_SUBST(DEP_CFLAGS)
-AC_SUBST(DEP_LIBS)
+AC_SUBST(VIEWRES_CFLAGS)
+AC_SUBST(VIEWRES_LIBS)
 
 AC_OUTPUT([Makefile])
