Replace more GNU make-ism's with more portable macros

--- a/Makefile.am
+++ b/Makefile.am
@@ -45,7 +45,7 @@ SUFFIXES = .ad
 
 appdefault_DATA = $(APPDEFAULTFILES)
 
-EXTRA_DIST = $(foreach FILE, $(APPDEFAULTFILES), $(FILE).ad)
+EXTRA_DIST = $(APPDEFAULTFILES:%=%.ad)
 
 CLEANFILES = $(APPDEFAULTFILES)
 
