Install man pages to section 1 instead of section m (Patch from Donnie     Berkholz)

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,7 @@ viewres_LDADD = $(VIEWRES_LIBS)
 viewres_SOURCES =	\
         viewres.c
 
-dist_man_MANS = \
+dist_man1_MANS = \
         viewres.man
 
 # App default files  (*.ad)
