--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,7 @@ XAW_CHECK_XPRINT_SUPPORT(VIEWRES)
 AC_SUBST(VIEWRES_CFLAGS)
 AC_SUBST(VIEWRES_LIBS)
 
+XORG_MANPAGE_SECTIONS
 XORG_RELEASE_VERSION
 
 AC_OUTPUT([Makefile])
