Use @APP_MAN_SUFFIX@ instead of $(APP_MAN_SUFFIX) in macro substitutions to     work better with BSD make

--- a/Makefile.am
+++ b/Makefile.am
@@ -52,7 +52,7 @@ CLEANFILES = $(APPDEFAULTFILES)
 
 appmandir =  $(mandir)/man$(APP_MAN_SUFFIX)
 
-appman_DATA = $(appman_SOURCES:man=$(APP_MAN_SUFFIX))
+appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
 
 EXTRA_DIST += $(appman_SOURCES)
 CLEANFILES += $(appman_DATA)
