Change default install dir for app-default files from     $(sysconfdir)/X11/app-defaults to $(libdir)/X11/app-defaults to match     the monolith & allow localization

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,7 +32,7 @@ appman_SOURCES = \
 
 # App default files  (*.ad)
 
-appdefaultdir = $(sysconfdir)/X11/app-defaults
+appdefaultdir = $(libdir)/X11/app-defaults
 
 
 APPDEFAULTFILES = \
