Another pass at .cvsignores for apps.

--- a/.cvsignore
+++ b/.cvsignore
@@ -5,13 +5,16 @@ Viewres
 aclocal.m4
 autom4te.cache
 compile
+config.guess
 config.h
 config.h.in
 config.log
 config.status
+config.sub
 configure
 depcomp
 install-sh
 missing
 stamp-h1
 viewres
+viewres.1
