Change *mandir targets to use new *_MAN_DIR variables set by xorg-macros.m4     update to fix bug #5167 (Linux prefers *.1x man pages in man1 subdir)

--- a/Makefile.am
+++ b/Makefile.am
@@ -50,7 +50,7 @@ EXTRA_DIST = $(APPDEFAULTFILES:%=%.ad)
 CLEANFILES = $(APPDEFAULTFILES)
 
 
-appmandir =  $(mandir)/man$(APP_MAN_SUFFIX)
+appmandir = $(APP_MAN_DIR)
 
 appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
 
