--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,7 @@ viewres_LDADD = $(VIEWRES_LIBS)
 viewres_SOURCES =	\
         viewres.c
 
-appman_SOURCES = \
+appman_PRE = \
         viewres.man
 
 # App default files  (*.ad)
@@ -52,9 +52,9 @@ CLEANFILES = $(APPDEFAULTFILES)
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
 SED = sed
