Change to use the app-defaults default dir configured in libXt.

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,7 +32,7 @@ appman_PRE = \
 
 # App default files  (*.ad)
 
-appdefaultdir = $(libdir)/X11/app-defaults
+appdefaultdir = @appdefaultdir@
 
 
 APPDEFAULTFILES = \
