Use AM_CFLAGS instead of viewres_CFLAGS and remove AM_PROG_CC_C_O

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,7 @@
 
 bin_PROGRAMS = viewres
 
-viewres_CFLAGS = $(VIEWRES_CFLAGS)
+AM_CFLAGS = $(VIEWRES_CFLAGS)
 viewres_LDADD = $(VIEWRES_LIBS)
 
 viewres_SOURCES =	\
