config: move CWARNFLAGS from configure.ac to Makefile.am
Compiler warning flags should be explicitly set in the makefile
rather than being merged with other packages compiler flags.

Signed-off-by: Gaetan Nadon <memsize@videotron.ca>

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,7 @@
 
 bin_PROGRAMS = viewres
 
-AM_CFLAGS = $(VIEWRES_CFLAGS)
+AM_CFLAGS = $(VIEWRES_CFLAGS) $(CWARNFLAGS)
 viewres_LDADD = $(VIEWRES_LIBS)
 
 viewres_SOURCES =	\
